--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -9,6 +9,7 @@ plugins {
 }
 
 android {
+    //noinspection GrDeprecatedAPIUsage
     compileSdkVersion rootProject.compile_sdk_version
     buildToolsVersion rootProject.build_tools_version
 
@@ -25,6 +26,7 @@ android {
         resConfigs 'en'
     }
 
+    //noinspection GroovyAssignabilityCheck
     signingConfigs {
         production {
             storeFile file(rootProject.SIGNING_KEY_RELEASE_PATH)
@@ -63,11 +65,13 @@ android {
 
     //noinspection GroovyAssignabilityCheck
     buildFeatures {
+        //noinspection GroovyAssignabilityCheck
         dataBinding true
         //noinspection GroovyAssignabilityCheck
         viewBinding true
     }
 
+    //noinspection GroovyAssignabilityCheck
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
@@ -110,8 +114,8 @@ dependencies {
     }
     /* Declare the dependency for the Performance Monitoring library.
        When using the BoM, we don't specify versions in Firebase library dependencies. */
-    implementation 'com.google.firebase:firebase-perf-ktx:20.2.0'
-    implementation 'com.google.firebase:firebase-messaging:23.1.0'
+    implementation 'com.google.firebase:firebase-perf-ktx:20.3.0'
+    implementation 'com.google.firebase:firebase-messaging:23.1.1'
 
     // ViewModel and LiveData
     def lifecycle_version = "2.5.1"
