--- a/gradle.properties
+++ b/gradle.properties
@@ -32,7 +32,7 @@ kotlin_version=1.7.21
 retrofit_version=2.9.0
 paging_version=2.1.2
 material_version=1.7.0
-fragment_version=1.5.4
+fragment_version=1.5.5
 okhttp_version=4.9.3
 junit_version=4.13.2
 ext_junit_version=1.1.4
@@ -55,3 +55,4 @@ env.SIGNING_KEY_RELEASE_PATH=../keystore/travelling.jks
 env.SIGNING_KEY_RELEASE_PASSWORD=travelling
 env.SIGNING_KEY_RELEASE_KEY=key1
 env.SIGNING_KEY_RELEASE_KEY_PASSWORD=travelling
+org.gradle.unsafe.configuration-cache=true
