--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -23,7 +23,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         // to ensure that the translations of Firebase library are relevant to the application
-        resConfigs 'en'
+        resourceConfigurations += ['en']
     }
 
     //noinspection GroovyAssignabilityCheck
@@ -102,11 +102,11 @@ dependencies {
 
     // android
     implementation "androidx.appcompat:appcompat:$appcompat_version"
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
 
     // firebase
-    implementation 'com.google.firebase:firebase-crashlytics:18.3.2'
-    implementation('com.google.firebase:firebase-analytics:21.2.0') {
+    implementation 'com.google.firebase:firebase-crashlytics:18.3.7'
+    implementation('com.google.firebase:firebase-analytics:21.2.2') {
         // remove advertising dependency
         exclude module: "play-services-ads-identifier"
         exclude module: "play-services-measurement"
@@ -114,18 +114,18 @@ dependencies {
     }
     /* Declare the dependency for the Performance Monitoring library.
        When using the BoM, we don't specify versions in Firebase library dependencies. */
-    implementation 'com.google.firebase:firebase-perf-ktx:20.3.0'
-    implementation 'com.google.firebase:firebase-messaging:23.1.1'
+    implementation 'com.google.firebase:firebase-perf-ktx:20.3.2'
+    implementation 'com.google.firebase:firebase-messaging:23.1.2'
 
     // ViewModel and LiveData
-    def lifecycle_version = "2.5.1"
+    def lifecycle_version = "2.6.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
     // Glide (Image caching and management)
-    def glideVersion = "4.14.2"
+    def glideVersion = "4.15.1"
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
     implementation "com.github.bumptech.glide:glide:$glideVersion"
 
@@ -136,7 +136,7 @@ dependencies {
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7'
 
     // Recyclerview
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
 
     // CardView
     implementation 'androidx.cardview:cardview:1.0.0'
@@ -154,13 +154,13 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:21.0.1"
 
     // Facebook SDK
-    def facebookVersion = "15.2.0"
+    def facebookVersion = "16.0.1"
     implementation "com.facebook.android:facebook-share:$facebookVersion"
     implementation "com.facebook.android:facebook-applinks:$facebookVersion"
     implementation "com.facebook.android:facebook-android-sdk:$facebookVersion"
 
     // used for animation
-    def lottieVersion = "5.2.0"
+    def lottieVersion = "6.0.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
     // Koin for Android
