--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx4608m
+org.gradle.unsafe.configuration-cache=true
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
@@ -21,29 +22,29 @@ android.enableJetifier=true
 kotlin.code.style=official
 kapt.incremental.apt=true
 # global dependency versions
-appcompat_version=1.5.1
-activity_version=1.6.1
-multidexVersion=2.0.1
-koin_android_version=3.3.0
-koin_core_version=3.2.2
-coroutines_version=1.6.4
-room_version=2.4.3
-kotlin_version=1.7.21
-retrofit_version=2.9.0
-paging_version=2.1.2
-material_version=1.7.0
-fragment_version=1.5.4
-okhttp_version=4.9.3
-junit_version=4.13.2
-ext_junit_version=1.1.4
-espresso_version=3.5.0
-gson_version=2.10
-jwt_version=4.2.1
-google_services_version=4.3.14
+appcompat_version=1.6.1
+activity_version=1.7.1
+coroutines_version=1.7.1
+ext_junit_version=1.1.5
+espresso_version=3.5.1
+fragment_version=1.5.7
 firebase_crashlytics_gradle_version=2.7.0
 firebase_bom_version=29.0.4
 firebase_perf_version=1.4.1
+gson_version=2.10.1
+google_services_version=4.3.14
+junit_version=4.13.2
+jwt_version=4.4.0
+koin_android_version=3.4.0
+koin_core_version=3.4.0
+kotlin_version=1.8.21
+multidexVersion=2.0.1
+material_version=1.9.0
+okhttp_version=4.10.0
+paging_version=2.1.2
 play_services_basement_version=17.6.0
+room_version=2.5.1
+retrofit_version=2.9.0
 # envirement variables
 env.HOST_URL=https://restcountries.com/v2/
 env.DATABASE_NAME=travelling.db
@@ -55,3 +56,7 @@ env.SIGNING_KEY_RELEASE_PATH=../keystore/travelling.jks
 env.SIGNING_KEY_RELEASE_PASSWORD=travelling
 env.SIGNING_KEY_RELEASE_KEY=key1
 env.SIGNING_KEY_RELEASE_KEY_PASSWORD=travelling
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
+
