--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx4608m
 org.gradle.unsafe.configuration-cache=true
+org.gradle.unsafe.configuration-cache-problems=warn
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
@@ -21,6 +22,9 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 kapt.incremental.apt=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
 # global dependency versions
 appcompat_version=1.6.1
 activity_version=1.7.1
@@ -56,7 +60,4 @@ env.SIGNING_KEY_RELEASE_PATH=../keystore/travelling.jks
 env.SIGNING_KEY_RELEASE_PASSWORD=travelling
 env.SIGNING_KEY_RELEASE_KEY=key1
 env.SIGNING_KEY_RELEASE_KEY_PASSWORD=travelling
-android.defaults.buildfeatures.buildconfig=true
-android.nonTransitiveRClass=false
-android.nonFinalResIds=false
 
