--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx4608m
 org.gradle.unsafe.configuration-cache=true
+# Use this flag sparingly, in case some of the plugins are not fully compatible
 org.gradle.unsafe.configuration-cache-problems=warn
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
@@ -27,7 +28,7 @@ android.nonTransitiveRClass=false
 android.nonFinalResIds=false
 # global dependency versions
 appcompat_version=1.6.1
-activity_version=1.7.1
+activity_version=1.7.2
 coroutines_version=1.7.1
 ext_junit_version=1.1.5
 espresso_version=3.5.1
@@ -39,8 +40,8 @@ gson_version=2.10.1
 google_services_version=4.3.14
 junit_version=4.13.2
 jwt_version=4.4.0
-koin_android_version=3.4.0
-koin_core_version=3.4.0
+koin_android_version=3.4.1
+koin_core_version=3.4.1
 kotlin_version=1.8.21
 multidexVersion=2.0.1
 material_version=1.9.0
