Update ci trigger.
Signed-off-by: Dmytro Turskyi <dmytro.turskyi@gmail.com>

--- a/.github/workflows/android_ci.yml
+++ b/.github/workflows/android_ci.yml
@@ -2,8 +2,8 @@ name: Upload to Firebase App Distribution
 
 on:
   push:
-    branches:
-      - dev
+    branches-ignore:
+      - master
 
 jobs:
   build:
