--- a/.github/workflows/android_ci.yml
+++ b/.github/workflows/android_ci.yml
@@ -2,8 +2,8 @@ name: Upload to Firebase App Distribution
 
 on:
   push:
-    branches:
-      - dev
+    branches-ignore:
+      - master
 
 jobs:
   build:
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2.3.3
 
-      - name: Set up JDK environment(JDK 11)
+      - name: Set up JDK environment(JDK 17)
         uses: actions/setup-java@v1.4.3
         with:
           java-version: 17
