--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx4608m
+org.gradle.jvmargs=-Xmx4608m -Dfile.encoding=UTF-8
 org.gradle.unsafe.configuration-cache=true
 # Use this flag sparingly, in case some of the plugins are not fully compatible
 org.gradle.unsafe.configuration-cache-problems=warn
@@ -22,36 +22,37 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+kapt.use.worker.api=true
 kapt.incremental.apt=true
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
 # global dependency versions
-appcompat_version=1.6.1
-activity_version=1.7.2
+appcompat_version=1.7.1
+activity_version=1.10.1
 coroutines_version=1.7.1
-ext_junit_version=1.1.5
-espresso_version=3.5.1
-fragment_version=1.6.0
+ext_junit_version=1.2.1
+espresso_version=3.6.1
+fragment_version=1.8.8
 firebase_crashlytics_gradle_version=2.7.0
 firebase_bom_version=29.0.4
 firebase_perf_version=1.4.1
 gson_version=2.10.1
 google_services_version=4.3.14
 junit_version=4.13.2
-jwt_version=4.4.0
-koin_android_version=3.4.2
+jwt_version=4.5.0
+koin_android_version=4.1.0
 koin_core_version=3.4.2
-kotlin_version=1.8.21
+kotlin_version=2.2.0
 multidexVersion=2.0.1
-material_version=1.9.0
-okhttp_version=4.10.0
-paging_version=2.1.2
-play_services_basement_version=17.6.0
-room_version=2.5.1
-retrofit_version=2.9.0
+material_version=1.12.0
+okhttp_version=5.1.0
+paging_version=3.3.6
+play_services_basement_version=18.7.1
+room_version=2.7.2
+retrofit_version=3.0.0
 # envirement variables
-env.HOST_URL=https://restcountries.com/v2/
+env.HOST_URL=https://restcountries.com/
 env.DATABASE_NAME=travelling.db
 env.SIGNING_KEY_DEBUG_PATH=../keystore/travelling.jks
 env.SIGNING_KEY_DEBUG_PASSWORD=travelling
