--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -102,11 +102,11 @@ dependencies {
 
     // android
     implementation "androidx.appcompat:appcompat:$appcompat_version"
-    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.core:core-ktx:1.16.0'
 
     // firebase
-    implementation 'com.google.firebase:firebase-crashlytics:18.3.7'
-    implementation('com.google.firebase:firebase-analytics:21.3.0') {
+    implementation 'com.google.firebase:firebase-crashlytics'
+    implementation('com.google.firebase:firebase-analytics') {
         // remove advertising dependency
         exclude module: "play-services-ads-identifier"
         exclude module: "play-services-measurement"
@@ -114,29 +114,30 @@ dependencies {
     }
     /* Declare the dependency for the Performance Monitoring library.
        When using the BoM, we don't specify versions in Firebase library dependencies. */
-    implementation 'com.google.firebase:firebase-perf-ktx:20.3.3'
-    implementation 'com.google.firebase:firebase-messaging:23.1.2'
+    implementation 'com.google.firebase:firebase-perf-ktx'
+    implementation 'com.google.firebase:firebase-messaging'
 
     // ViewModel and LiveData
-    def lifecycle_version = "2.6.1"
+    def lifecycle_version = "2.9.2"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
     // Glide (Image caching and management)
-    def glideVersion = "4.15.1"
+    def glideVersion = "4.16.0"
+    //noinspection KaptUsageInsteadOfKsp
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
     implementation "com.github.bumptech.glide:glide:$glideVersion"
 
     // Displaying SVG images
-    implementation 'com.github.corouteam:GlideToVectorYou:2.0.0'
+    implementation 'com.github.corouteam:GlideToVectorYou:v2.0.0'
 
     // BaseRecyclerViewAdapterHelper
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7'
 
     // Recyclerview
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.4.0'
 
     // CardView
     implementation 'androidx.cardview:cardview:1.0.0'
@@ -145,22 +146,22 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     // ViewPager2
-    implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation "androidx.viewpager2:viewpager2:1.1.0"
 
     // PhotoView
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
     // Location
-    implementation "com.google.android.gms:play-services-location:21.0.1"
+    implementation "com.google.android.gms:play-services-location:21.3.0"
 
     // Facebook SDK
-    def facebookVersion = "16.0.1"
+    def facebookVersion = "18.0.3"
     implementation "com.facebook.android:facebook-share:$facebookVersion"
     implementation "com.facebook.android:facebook-applinks:$facebookVersion"
     implementation "com.facebook.android:facebook-android-sdk:$facebookVersion"
 
     // used for animation
-    def lottieVersion = "6.0.1"
+    def lottieVersion = "6.6.7"
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
     // Koin for Android
@@ -174,7 +175,7 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
 
-    def jupiter_version = "5.9.1"
+    def jupiter_version = "5.13.3"
     testImplementation "org.junit.jupiter:junit-jupiter-api:$jupiter_version"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$jupiter_version"
 
